home.html was commited from dev branch and new file login.html was created

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 	<title>coming home!!</title>
 </head>
 <body>
-<p>he lives in a pineapple under the tree... spongebob square pants
+<p>he lives in a pineapple under the tree... spongebob square pants<br>
 	he can set fire unter water</p>
 </body>
 </html>
